# melcurial

./: .gitignore  README.md  install.sh  mel  mercurial_plan.md  post.md  pyproject.toml  serve-docs.sh
.github/workflows/: pages.yml
.mel/: config.json
docs/: .nojekyll  about.html  about.md  config.html  engineers.md  explained.html  index.html  users.md
scripts/: build_docs.py
templates/: about.html.j2  base.html.j2  config.html.j2  explained.html.j2  index.html.j2
tests/: test_mel.py
